# 25.exam

1.operation/: CMakeLists.txt
1.operation/include/: instruments.h
1.operation/src/: CMakeLists.txt  main.cpp
2.PCsimulator/: CMakeLists.txt
2.PCsimulator/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
2.PCsimulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
